src/test/ui/issues/issue-23302-1.stderr
error[E0391]: cycle detected when evaluating constant for MIR opt/codegen `X::A::{constant#0}`
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^
   |
note: ...which requires simplifying constant for the type system `X::A::{constant#0}`...
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^
<<<<<<< HEAD
note: ...which requires const-evaluating + checking `X::A::{constant#0}`...
||||||| parent of ab70bbeec72... Use ValTree in all type level constants
   = note: ...which again requires simplifying constant for the type system `X::A::{constant#0}`, completing the cycle
note: cycle used when simplifying constant for the type system `X::A::{constant#0}`
=======
   = note: ...which again requires evaluating constant for MIR opt/codegen `X::A::{constant#0}`, completing the cycle
note: cycle used when evaluating constant for MIR opt/codegen `X::A::{constant#0}`
>>>>>>> ab70bbeec72... Use ValTree in all type level constants
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^
   = note: ...which requires normalizing `X::A as isize`...
   = note: ...which again requires simplifying constant for the type system `X::A::{constant#0}`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-23302-1.rs:3:1
   |
LL | enum X {
   | ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
